@@ -1,0 +1,12 @@
+package gov.va.legoEdit.gui.legoTreeView;
+
+/**
+ * BooleanCallback
+ * @author Dan Armbrust 
+ * Copyright 2013
+ * 
+ */
+public interface BooleanCallback
+{
+	public void sendResult(boolean result);
+}
