@@ -1,10 +1,13 @@
 Lego Editor Change Log
 2013/03/?? - 0.58
-  *  Filtered ( and ) out of the lucene queries so they FSNs don't cause searches to fail.
+  *  Filtered '(' and ')' out of the lucene queries so they FSNs don't cause searches to fail.
   *  Fixed a bug where the PNCS filter drop down wasn't being updated after a new lego was created
   *  Fixed a bug where rapid changes to the lego list filters could cause strange behavior
   *  Fixed a null pointer that could happen in certain situations within the filter update.
   *  Fixed a null pointer that happened if you tried to view a new (unsaved) lego in the web browser
+  *  Moved the validator calls into a background (non-GUI) thread
+  *  Fixed a bug in the PointNode validation error reporting for intervals and bounds that was a 
+     a regression in the 0.57 release. 
   *  artf227644 - Add CIMI import / viewer tool.
 
 2013/03/14 - 0.57
